# xarray-kat

./: CHANGELOG.rst  README.rst  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  pre-commit.yml
src/xarray_kat/: __init__.py  array.py  async_loop.py  corr_products.py  datatree_factory.py  entrypoint.py  errors.py  jwt.py  katdal_types.py  meerkat_chunk_manager.py  meerkat_store_provider.py  meerkat_stores.py  multiton.py  telstate.py  tensorstore_factory.py  types.py  xkat_types.py
src/xarray_kat/obstore/: adapted_array.py  datatree_factory.py  lifecycle_manager.py
src/xarray_kat/stores/: base_store.py  calibration.py  flag_store.py  http_store.py  vfw_store.py  vis_store.py  vis_weight_flag_store_factory.py  visibility_stores.py  weight_store.py
src/xarray_kat/tensorstores/: base_store.py  flag_store.py  visibility_stores.py  weight_store.py
src/xarray_kat/utils/: __init__.py  chunk_selection.py  chunk_slicing.py  serialisation.py
tests/: __init__.py  conftest.py  meerkat_antennas.py  test_applycal_corrections.py  test_array.py  test_async_loop.py  test_basic.py  test_chunk_selection.py  test_chunk_slicing.py  test_httpserver_basic.py  test_katdal.py  test_meerkat_chunked.py  test_mock_http_server.py  test_multiton.py  test_synthetic_observation.py  test_utils.py  test_xradio.py
tests/fixtures/: README.md  __init__.py  demo_usage.py  rdb_generator.py  synthetic_observation.py
