[project]
name = "xarray-kat"
version = "0.1.0"
description = "Add your description here"
readme = "README.rst"
authors = [
    { name = "Simon Perkins", email = "simon.perkins@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "katpoint>=0.10.2",
    "katsdptelstate[rdb]>=1.0.0",
    "tensorstore>=0.1.77",
    "xarray>=2025.9.1",
]

[project.entry-points."xarray.backends"]
"xarray-kat" = "xarray_kat.entrypoint:KatEntryPoint"

[project.entry-points."xarray.chunkmanagers"]
"xarray-kat" = "xarray_kat.meerkat_chunk_manager:MeerKatChunkManager"

[project.optional-dependencies]
testing = [
    "cloudpickle>=3.1.1",
    "dask>=2025.9.1",
    "dill>=0.4.0",
    "pytest>=8.4.2",
    "pytest-httpserver>=1.1.0",
]
numba = [
    "numba>=0.62.1",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "tbump>=6.11.0",
]

[tool.ruff]
line-length = 88
indent-width = 2
target-version = "py311"

[tool.ruff.lint]
select = ["F", "E", "W", "I001"]
extend-select = ["I"]

exclude = [
    "src/xarray_kat/third_party/*",
]


[tool.tbump]
# Uncomment this if your project is hosted on GitHub:
# github_url = "https://github.com/<user or organization>/<project>/"

[tool.tbump.version]
current = "0.0.4"

# Example of a semver regexp.
# Make sure this matches current_version before
# using tbump
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "{new_version}"

# For each file to patch, add a [[tool.tbump.file]] config
# section containing the path of the file, relative to the
# tbump.toml location.
[[tool.tbump.file]]
src = "pyproject.toml"
